# policieManagement

./: .gitignore  README  README.md  pyproject.toml
src/: Main.py
src/App/Policies/: addPolicie.py  changeStatus.py  getPolicie.py  getPolicies.py
src/App/Policies/Domain/: Policie.py
src/Context/Http/: server.py
src/Context/Http/routes/: policies.py
src/Context/Http/schemas/: policiesPayload.py
src/Context/Repository/: main.py
src/Context/Repository/Policie/: model.py  policieRepository.py
src/config/: setting.py
testing/: conftest.py
testing/Context/Http/: test_routes.py
