[project]
name = "examentecnico"
version = "0.1.0"
description = "examen para vida camara"
authors = [
    {name = "Fabian Escarate"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standar] (>=0.35.0,<0.36.0)",
    "sqlmodel (>=0.0.24,<0.0.25)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
